module1/src/main/java/org/example/error/ValidationException.java
package org.example.error;

public class ValidationException extends CommonException {
    public ValidationException(String message) {
        super(ErrorCode.VALIDATION_ERROR, message);
    }
}
